--- a/S_Chauhan_MyFavouriteCar/src/app/content-list/content-list.component.html
+++ b/S_Chauhan_MyFavouriteCar/src/app/content-list/content-list.component.html
@@ -1,4 +1,19 @@
-<input type="text" [(ngModel)]="searchTitle" placeholder="Enter title">
+<div>
+    <input [(ngModel)]="searchTitle" placeholder="Enter Content Title" />
+    <button (click)="checkContentExists()">Search Car</button>
+    <div [ngStyle]="{'color' : contentExists ? 'green' : 'red'}">
+      {{ message }}
+    </div>
+  </div>
+  
+  <app-create-content (createContent)="onContentCreated($event)"></app-create-content>
+  <div>
+    <div *ngFor="let content of contentItems">
+      <app-content-card [contentItem]="content"></app-content-card>
+    </div>
+  </div>
+
+<!-- <input type="text" [(ngModel)]="searchTitle" placeholder="Enter title">
 <button (click)="checkContentExists()">Check Car </button>
 
 <p [ngStyle]="{'color': contentExists ? 'green' : 'red'}">{{ message }}</p>
@@ -14,4 +29,4 @@
 <div>
 <h1>Sports</h1>
 <app-content-card *ngFor="let contentItem of contentItems | typegiver: 'Sports'" [contentItem]="contentItem"></app-content-card>
-</div>
+</div> -->
